k8s/init-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-service
  labels:
    app: init-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-service
  template:
    metadata:
      labels:
        app: init-service
    spec:
      containers:
        - name: init-service
          image: lalit0708/replit-init-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: init-service
spec:
  selector:
    app: init-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
