k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to true when you configure HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: ae41f1ac253364a678139871a7f94967-347610126.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /project
            pathType: Prefix
            backend:
              service:
                name: init-service
                port:
                  number: 3000
          - path: /start
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 3002
